@@ -25,7 +25,7 @@
 static char THIS_FILE[] = __FILE__;
 #endif
 
-//  C++ keywords (MSVC5.0 + POET5.0)
+//  (Visual) Basic keywords
 static LPTSTR s_apszBasicKeywordList[] =
   {
     _T ("SMDoMenu"),
@@ -59,6 +59,7 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Beep"),
     _T ("Begin"),
     _T ("BeginProperty"),
+    _T ("Binary"),
     _T ("Boolean"),
     _T ("ByRef"),
     _T ("ByVal"),
@@ -72,6 +73,7 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("CInt"),
     _T ("CLng"),
     _T ("Close"),
+    _T ("Compare"),
     _T ("Const"),
     _T ("Cos"),
     _T ("CreateObject"),
@@ -80,6 +82,7 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("CVar"),
     _T ("CurDir"),
     _T ("Currency"),
+    _T ("Database"),
     _T ("Date"),
     _T ("Declare"),
     _T ("Dialog"),
@@ -97,6 +100,7 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Enum"),
     _T ("EOF"),
     _T ("Erase"),
+    _T ("Event"),
     _T ("Exit"),
     _T ("Exp"),
     _T ("Explicit"),
@@ -120,7 +124,6 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Hex"),
     _T ("Hour"),
     _T ("If"),
-    _T ("In"),
     _T ("Then"),
     _T ("Else"),
     _T ("ElseIf"),
@@ -138,20 +141,18 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Kill"),
     _T ("LBound"),
     _T ("LCase"),
-    _T ("LCase$"),
     _T ("Left"),
-    _T ("Left$"),
     _T ("Len"),
     _T ("Let"),
     _T ("Like"),
     _T ("Lib"),
     _T ("Line"),
-    _T ("Input#"),
     _T ("Log"),
     _T ("Long"),
     _T ("Mid"),
     _T ("Minute"),
     _T ("MkDir"),
+    _T ("Mod"),
     _T ("Month"),
     _T ("MsgBox"),
     _T ("Name"),
@@ -159,6 +160,7 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Now"),
     _T ("Not"),
     _T ("Nothing"),
+    _T ("Object"),
     _T ("Oct"),
     _T ("On"),
     _T ("Or"),
@@ -167,12 +169,13 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Option"),
     _T ("Optional"),
     _T ("Base"),
+    _T ("ParamArray"),
+    _T ("Preserve"),
     _T ("Print"),
     _T ("Private"),
     _T ("Property"),
     _T ("Public"),
-    _T ("Private"),
-    _T ("Property"),
+    _T ("RaiseEvent"),
     _T ("ReDim"),
     _T ("Rem"),
     _T ("Resume"),
@@ -181,13 +184,13 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("Rnd"),
     _T ("Second"),
     _T ("Seek"),
-    _T ("Seek"),
     _T ("Select"),
     _T ("Case"),
     _T ("SendKeys"),
     _T ("Set"),
     _T ("Shell"),
     _T ("Sin"),
+    _T ("Single"),
     _T ("Space"),
     _T ("Sqr"),
     _T ("Static"),
@@ -207,9 +210,11 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("LTrim"),
     _T ("RTrim"),
     _T ("Type"),
+    _T ("TypeOf"),
     _T ("True"),
     _T ("UBound"),
     _T ("UCase"),
+    _T ("Until"),
     _T ("Val"),
     _T ("Variant"),
     _T ("VarType"),
@@ -217,8 +222,91 @@ static LPTSTR s_apszBasicKeywordList[] =
     _T ("While"),
     _T ("Wend"),
     _T ("With"),
+    _T ("WithEvents"),
     _T ("Write"),
+    _T ("Xor"),
     _T ("Year"),
+    // Visual Basic.net
+    _T ("AddHandler"),
+    _T ("AddressOf"),
+    _T ("AndAlso"),
+    _T ("Ansi"),
+    _T ("Assembly"),
+    _T ("Auto"),
+    _T ("Catch"),
+    _T ("CBool"),
+    _T ("CByte"),
+    _T ("CChar"),
+    _T ("CDate"),
+    _T ("CDec"),
+    _T ("Char"),
+    _T ("Class"),
+    _T ("CObj"),
+    _T ("Continue"),
+    _T ("CSByte"),
+    _T ("CShort"),
+    _T ("CType"),
+    _T ("CUInt"),
+    _T ("CULng"),
+    _T ("CUShort"),
+    _T ("Custom"),
+    _T ("Decimal"),
+    _T ("Default"),
+    _T ("Delegate"),
+    _T ("DirectCast"),
+    _T ("EndIf"),
+    _T ("ExternalSource"),
+    _T ("Finally"),
+    _T ("GetType"),
+    _T ("Handles"),
+    _T ("Implements"),
+    _T ("Imports"),
+    _T ("Inherits"),
+    _T ("Interface"),
+    _T ("IsFalse"),
+    _T ("IsNot"),
+    _T ("IsTrue"),
+    _T ("Me"),
+    _T ("Module"),
+    _T ("MustInherit"),
+    _T ("MustOverride"),
+    _T ("My"),
+    _T ("MyBase"),
+    _T ("MyClass"),
+    _T ("Namespace"),
+    _T ("Narrowing"),
+    _T ("NotInheritable"),
+    _T ("NotOverridable"),
+    _T ("Of"),
+    _T ("Off"),
+    _T ("Operator"),
+    _T ("OrElse"),
+    _T ("Overloads"),
+    _T ("Overridable"),
+    _T ("Overrides"),
+    _T ("Partial"),
+    _T ("Protected"),
+    _T ("ReadOnly"),
+    _T ("Region"),
+    _T ("RemoveHandler"),
+    _T ("Sbyte"),
+    _T ("Shadows"),
+    _T ("Shared"),
+    _T ("Short"),
+    _T ("Strict"),
+    _T ("Structure"),
+    _T ("SyncLock"),
+    _T ("Throw"),
+    _T ("Try"),
+    _T ("TryCast"),
+    _T ("UInteger"),
+    _T ("ULong"),
+    _T ("Unicode"),
+    _T ("UShort"),
+    _T ("Using"),
+    _T ("When"),
+    _T ("Widening"),
+    _T ("WriteOnly"),
     NULL
   };
 
