@@ -8,6 +8,7 @@ WinMerge 2.8.2
   Allow drag & drop of paths to Open dialog (#1945254)
   Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
   Tab icons at Filter dialog (#1926531)
+  Add VB.net keywords to Basic highlighter (#1970912)
   BugFix: Shortcuts given in command line were not expanded (#1942217)
   BugFix: Version Control filter did not match all VSS files (#1881186)
   New translation: Romanian (#1939729)
